# registration_system_rs

./: .env  Cargo.toml
src/: main.rs
src/adapters/: mod.rs  mysql_activity_repository.rs
src/application/: activity_service.rs  mod.rs  user_service.rs
src/db/: connections.rs
src/handlers/: activity_handler.rs  mod.rs  user_handler.rs  user_team_handler.rs
src/models/: activity.rs  activity_status_update.rs  mod.rs  team.rs  user.rs
src/ports/: activity_repository.rs  mod.rs  user_repository.rs
src/routes/: activity.rs  user.rs
