[package]
name = "registration_system_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.6", features = [
    "mysql",
    "runtime-actix-native-tls",
    "chrono",
    "offline",
    "macros"
] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
serde_json = "1.0.132"
