[package]
name = "registration_system_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.6.5"  # 使用最新的 0.6.x 版本
env_logger = "0.10.2"
sqlx = { version = "0.8.3", features = [
    "mysql",
    "runtime-async-std",
    "tls-native-tls",
    "chrono",
    "macros"
] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.6"
serde_json = "1.0.132"
async-trait = "0.1"
uuid = { version = "1.13.1", features = ["v4"] } # Important!
